Fixed smartphones's horizontal scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,6 +125,10 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   @apply bg-white text-slate-900 dark:bg-slate-950 dark:text-white scroll-smooth transition-colors duration-300 overflow-x-hidden;
 }
